--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.0.4'
     repositories {
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.squareup.sqldelight:gradle-plugin:0.4.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.5'
+        classpath 'com.squareup.sqldelight:gradle-plugin:0.5.1'
     }
 }
 
@@ -52,14 +51,14 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.5'
+    compile 'org.jetbrains.kotlin:kotlin-reflect:1.0.5'
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
 
-    compile 'com.google.dagger:dagger:2.0.2'
-    kapt 'com.google.dagger:dagger-compiler:2.0.2'
+    compile 'com.google.dagger:dagger:2.7'
+    kapt 'com.google.dagger:dagger-compiler:2.7'
     provided 'javax.annotation:jsr250-api:1.0'
 
     kapt 'com.google.auto.value:auto-value:1.3'
@@ -69,7 +68,9 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7-kotlin:0.4.0'
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7-kotlin:0.4.0'
 
-    compile 'com.squareup.sqlbrite:sqlbrite:0.7.0'
+    compile('com.squareup.sqlbrite:sqlbrite:0.8.0') {
+        exclude group: 'com.android.support'
+    }
 
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
